--- a/c/index.html
+++ b/c/index.html
@@ -2,7 +2,9 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- 引入样式 -->
     <link rel="stylesheet" href="lib/element-ui/theme-default/index.css">
     <style type="text/css">
@@ -90,7 +92,7 @@
             <iframe :src="src" frameborder="0" style="width:100%; height:100%; border: 0; overflow: hidden;"></iframe>
         </div>
         <el-dialog title="修改密码" v-model="dialogVisible" size="tiny">
-            <el-form :model="passwordForm" :rules="rules" ref="passwordForm">
+            <el-form :model="passwordForm" :rules="rules" ref="passwordForm" label-width="100px">
                 <el-form-item label="原密码" prop="login_pwd">
                     <el-input type="password" v-model="passwordForm.login_pwd" auto-complete="off"></el-input>
                 </el-form-item>
@@ -102,7 +104,7 @@
                 </el-form-item>
             </el-form>
             <div slot="footer">
-                <el-button @click="resetForm('passwordForm')">取 消</el-button>
+                <el-button @click="dialogVisible=false">取 消</el-button>
                 <el-button type="primary" @click="submitForm('passwordForm')">确 定</el-button>
             </div>
         </el-dialog>
@@ -146,7 +148,23 @@
                 new_login_pwd: '',
                 new_login_pwd2: ''
             },
-            rules: {}
+            rules: {
+                login_pwd: [{
+                    required: true,
+                    message: '请输入原密码',
+                    trigger: 'blur'
+                }],
+                new_login_pwd: [{
+                    required: true,
+                    message: '请输入新密码',
+                    trigger: 'blur'
+                }],
+                new_login_pwd2: [{
+                    required: true,
+                    message: '请输入新密码',
+                    trigger: 'blur'
+                }]
+            }
         },
         methods: {
             logout: function() {
@@ -191,16 +209,9 @@
                             vm.dialogVisible = false;
                         }, 1000);
                     } else {
-                        vm.$message({
-                            showClose: true,
-                            message: '请检查数据',
-                            type: 'warning'
-                        });
                         return false;
                     }
                 });
-
-
             },
             resetForm: function(formName) {
                 var form = this.$refs[formName];
