my css script变更

--- a/m/my.html
+++ b/m/my.html
@@ -109,8 +109,8 @@
                 <div class="weui-cell__ft"></div>
             </a>
         </div-->
-        <br>
-        <a href="javascript:;" class="weui-btn weui-btn_warn" onclick="logout()">退出</a>
+        <!--br>
+        <a href="javascript:;" class="weui-btn weui-btn_warn" onclick="logout()">退出</a-->
         <div class="weui-tabbar">
             <a href="index.html" class="weui-tabbar__item">
                 <!-- <img src="images/icon_nav_button.png" alt="" class="weui-tabbar__icon"> -->
