--- a/m/my/friend.html
+++ b/m/my/friend.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>e通</title>
+    <title>我的好友</title>
     <link rel="stylesheet" href="../js/lib/weuijs/style/weuijs.min.css">
     <link rel="stylesheet" href="../css/ui-base.css">
     <style type="text/css">
@@ -19,20 +19,7 @@
     </style>
 </head>
 
-<body class="page_navbar">
-    <div class="navbar">
-        <div class="navbar__inner">
-            <div class="navbar__left">
-                <a href="javascript:history.back()" class="navbar__link">
-                    <i class="icon-back_nav"></i>
-                </a>
-            </div>
-            <div class="navbar__center">我的好友</div>
-            <div class="navbar__right">
-                &#12288;&#12288;
-            </div>
-        </div>
-    </div>
+<body>
     <div id="infinite" class="page__content">
         <div id="friend-list" class="weui-cells">
         </div>
