--- a/m/my/add-bank-card.html
+++ b/m/my/add-bank-card.html
@@ -5,26 +5,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>e通</title>
-    <link rel="stylesheet" href="../../lib/weui/style/weui.min.css">
-    <link rel="stylesheet" href="../../lib/weuijs/style/weuijs.css">
-    <link rel="stylesheet" href="../../css/ui-base.css">
+    <title>添加银行卡</title>
+    <link rel="stylesheet" href="../js/lib/weuijs/style/weuijs.min.css">
+    <link rel="stylesheet" href="../css/ui-base.css">
 </head>
 
-<body class="page_navbar">
-    <div class="navbar">
-        <div class="navbar__inner">
-            <div class="navbar__left">
-                <a href="javascript:history.back()" class="navbar__link">
-                    <i class="icon-back_nav"></i>
-                </a>
-            </div>
-            <div class="navbar__center">添加银行卡</div>
-            <div class="navbar__right">
-                &#12288;&#12288;
-            </div>
-        </div>
-    </div>
+<body>
     <div class="page__content">
         <form id="detail-fm" method="post" action="/action/user/card-info/create">
             <div class="weui-cells__title">请绑定持卡人本人的银行卡</div>
@@ -34,7 +20,7 @@
                         <label for="" class="weui-label">持卡人</label>
                     </div>
                     <div class="weui-cell__bd">
-                        <input id="bank_acct_nm" class="weui-input validate" type="text" name="bank_acct_nm" placeholder="请输入持卡人" readonly="readonly"  required="required" title="持卡人">
+                        <input id="bank_acct_nm" class="weui-input validate" type="text" name="bank_acct_nm" placeholder="请输入持卡人" readonly  required="required" title="持卡人">
                     </div>
                     <div class="weui-cell__ft">
                         <i class="weui-icon-info"></i>
@@ -53,11 +39,8 @@
             <a href="javascript:;" class="weui-btn weui-btn_primary" onclick="submitDetail()">提交</a>
         </form>
     </div>
-    <script type="text/javascript" src="../../lib/jweixin-1.0.0.js"></script>
-    <script type="text/javascript" src="../../lib/zepto/zepto.min.js" charset="utf-8"></script>
-    <script type="text/javascript" src="../../lib/art-template/template.js" charset="utf-8"></script>
-    <script type="text/javascript" src="../../lib/weuijs/weuijs.js" charset="utf-8"></script>
-    <script type="text/javascript" src="../../js/base.js" charset="utf-8"></script>
+    <script type="text/javascript" src="../js/lib/zepto.min.js"></script>
+    <script type="text/javascript" src="../js/lib/weuijs/weuijs.min.js"></script>
     <script type="text/javascript">
     $(function() {
         //验证
