--- a/m/my/withdraw.html
+++ b/m/my/withdraw.html
@@ -5,29 +5,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>e通</title>
-    <link rel="stylesheet" href="../../lib/weui/style/weui.min.css">
-    <link rel="stylesheet" href="../../lib/weuijs/style/weuijs.css">
-    <link rel="stylesheet" href="../../css/ui-base.css">
+    <title>余额提现</title>
+    <link rel="stylesheet" href="../js/lib/weuijs/style/weuijs.min.css">
+    <link rel="stylesheet" href="../css/ui-base.css">
 </head>
 
 <body>
-    <div class="page_navbar">
-        <div class="navbar">
-            <div class="navbar__inner">
-                <div class="navbar__left">
-                    <a href="javascript:history.back()" class="navbar__link">
-                        <i class="icon-back_nav"></i>
-                    </a>
-                </div>
-                <div class="navbar__center">余额提现</div>
-                <div class="navbar__right">
-                    <a href="withdraw-history.html" class="navbar__link" style="font-size: 14px;">
-                        <span>提现明细</span>
-                    </a>
-                </div>
-            </div>
-        </div>
+    <div>
         <div class="page__content">
             <form id="detail-fm" method="post" action="/action/user/withdraw">
             <div class="weui-panel weui-panel_access">
@@ -63,6 +47,9 @@
                 可用余额<span id="available_balance">0.00</span>元,<a href="javascript:void(0);" onclick="withdrawAll()">全部提现</a>
                 </span>
             </label>
+            <a href="withdraw-history.html" class="navbar__link" style="font-size: 14px;">
+				<span>提现明细</span>
+			</a>
             <br>
             <a href="javascript:;" class="weui-btn weui-btn_primary" onclick="submitDetail()">确认提现</a>
             </form>
@@ -85,11 +72,8 @@
         <div id="card-list" class="page__content">
         </div>
     </div>
-    <script type="text/javascript" src="../../lib/jweixin-1.0.0.js"></script>
-    <script type="text/javascript" src="../../lib/zepto/zepto.min.js" charset="utf-8"></script>
-    <script type="text/javascript" src="../../lib/art-template/template.js" charset="utf-8"></script>
-    <script type="text/javascript" src="../../lib/weuijs/weuijs.js" charset="utf-8"></script>
-    <script type="text/javascript" src="../../js/base.js" charset="utf-8"></script>
+    <script type="text/javascript" src="../js/lib/zepto.min.js"></script>
+    <script type="text/javascript" src="../js/lib/weuijs/weuijs.min.js"></script>
     <script id="card-templ" type="text/html">
         {{each rows as row i}}
         <div class="weui-panel weui-panel_access">
