--- a/m/my/bank-card.html
+++ b/m/my/bank-card.html
@@ -11,51 +11,69 @@
 </head>
 
 <body>
-    <div id="card-list" class="page__content">
-    </div>
-    <a class="weui-panel weui-panel_access" href="add-bank-card.html">
-		<div class="weui-panel__bd">
-			<div class="weui-media-box weui-media-box_appmsg">
-				<div class="weui-media-box__hd">
-				</div>
-				<div class="weui-media-box__bd">
-					<h4 class="weui-media-box__title" align="center">
-						<p>添加银行卡</p>
-					</h4>
-				</div>
-			</div>
+	<div class="weui-cells" id="card-list">
+		<div class="searchbar-result">
+		
 		</div>
-	</a>  
+		<a class="weui-cell weui-cell_access" href="add-bank-card.html">
+			<div class="weui-cell__hd">
+				<i class="icon-plus" style="width: 60px; height: 60px;"></i>
+			</div>
+			<div class="weui-cell__bd">
+				<h4 class="weui-media-box__title">
+					<p>添加银行卡</p>
+				</h4>
+			</div>
+		</a>  
+  	</div>
     <script type="text/javascript" src="../js/lib/zepto.min.js"></script>
     <script type="text/javascript" src="../js/lib/weuijs/weuijs.min.js"></script>
     <script id="card-templ" type="text/html">
         {{each rows as row i}}
-        <div class="weui-panel weui-panel_access">
-            <div class="weui-panel__bd">
-                <a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg">
-                    <div class="weui-media-box__hd">
-                        <!-- <img class="weui-media-box__thumb" src="../images/icon_nav_panel.png" alt=""> -->
-                        <i class="icon-bank-card" style="width: 60px; height: 60px;"></i>
-                    </div>
-                    <div class="weui-media-box__bd">
-                        <h4 class="weui-media-box__title">
-                        <p>{{row.bank_nm}}</p>
-                        <p>{{row.bank_acct_no | formatCardNo}}</p>
-                        </h4>
-                    </div>
-                </a>
-            </div>
+        <div class="weui-cell weui-cell_access">
+			<div class="weui-cell__hd">
+				<i class="icon-bank-card" style="width: 60px; height: 60px;"></i>
+			</div>
+			<div class="weui-cell__bd">
+				<h4 class="weui-media-box__title">
+				<p>{{row.bank_nm}}</p>
+				<p>{{row.bank_acct_no | formatCardNo}}</p>
+				</h4>
+			</div>
         </div>    
         {{/each}}
     </script>
     <script type="text/javascript">
-    template.helper('formatCardNo', function (cardNo) {
-        return cardNo.replace(/(\S{4})(?=\S)/g, "$1 ");
-    });
-    $(function() {
-        $$.request('/action/user/card-info/list', {}, function(data) {
-            $('#card-list').append(template('card-templ', data));
+	var searchPage = weui.searchPage('#card-list', {
+        resultTpl: '#card-templ',
+        loader: onSearch,
+        onInput: function() {
+            console.log(this, arguments);
+        },
+        onClickItem: function(row) {
+            console.log(this, arguments);
+            weui.page.back();
+        }
+    }).search();
+		
+	function onSearch(param, success, error) {
+        var queryParams = param;
+        $$.request('/action/as-user-card-info/list', queryParams, {
+            success: function(data) {
+                if (data.errcode == 0) {
+                    success(data.rows);
+                } else {
+					
+                }
+            },
+            error: function() {
+                error();
+            }
         });
+    }
+		
+    $(function() {
+        
     });
     </script>
 </body>
