--- a/m/my.html
+++ b/m/my.html
@@ -206,7 +206,7 @@
                 }
             }
         });
-		$$.request('/action/user/account/view', {}, {
+		$$.request('/action/account/view', {}, {
             success: function(data) {
 				$$.load({
 					available_balance: parseFloat(data.data.available_balance || 0).toFixed(2),
