--- a/m/my/add-bank-card.html
+++ b/m/my/add-bank-card.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="page__content">
-        <form id="detail-fm" method="post" action="/action/user/card-info/create">
+        <form id="detail-fm">
             <div class="weui-cells__title">请绑定持卡人本人的银行卡</div>
             <div class="weui-cells">
                 <div class="weui-cell">
@@ -20,7 +20,7 @@
                         <label for="" class="weui-label">持卡人</label>
                     </div>
                     <div class="weui-cell__bd">
-                        <input id="bank_acct_nm" class="weui-input validate" type="text" name="bank_acct_nm" placeholder="请输入持卡人" readonly  required="required" title="持卡人">
+                        <input id="bank_acct_nm" class="weui-input" type="text" name="bank_acct_nm" placeholder="请输入持卡人" readonly  required="required" title="持卡人">
                     </div>
                     <div class="weui-cell__ft">
                         <i class="weui-icon-info"></i>
@@ -31,7 +31,7 @@
                         <label for="" class="weui-label">卡号</label>
                     </div>
                     <div class="weui-cell__bd">
-                        <input class="weui-input validate" type="number" name="bank_acct_no" placeholder="请输入银行卡号" required="required" title="卡号">
+                        <input class="weui-input" type="number" name="bank_acct_no" placeholder="请输入银行卡号" required="required" title="卡号">
                     </div>
                 </div>
             </div>
@@ -44,8 +44,7 @@
     <script type="text/javascript">
     $(function() {
         //验证
-        $('.validate').validate();
-
+		
         $$.request('/action/user/view', {}, function(data) {
             if (data.data.auth_st == '2') {
                 $$.load({
@@ -58,9 +57,20 @@
     });
 
     function submitDetail() {
-        $$.submit('detail-fm', function() {
-            history.back();
-        });
+		if (!weui.form.validate('#detail-fm', options)) return;
+		var param = ('#form').serializeObject();
+
+		$$.request('/action/user/card-info/create', param, {
+			success: function(data) {
+				if (data.errcode == 0) {
+					weui.toast('操作成功');
+					history.back();
+				} else {
+					weui.alert(data.errmsg, { title: '提示' });
+				}
+			},
+			error: function() {}
+		});
     }
     </script>
 </body>
