--- a/m/my/balance.html
+++ b/m/my/balance.html
@@ -44,7 +44,7 @@
         $$.request('/action/account/view', {}, {
 			success: function(data) {
 				$$.load({
-					available_balance: parseFloat(data.available_balance || 0).toFixed(2)
+					available_balance: parseFloat(data.data.available_balance || 0).toFixed(2)
 				}); //unsettled_income,balance
 			}
         });
