--- a/m/my/bank-card.html
+++ b/m/my/bank-card.html
@@ -11,20 +11,24 @@
 </head>
 
 <body>
-	<div class="weui-cells" id="card-list">
-		<div class="searchbar-result">
-		
-		</div>
-		<a class="weui-cell weui-cell_access" href="add-bank-card.html">
-			<div class="weui-cell__hd">
-				<i class="icon-plus" style="width: 60px; height: 60px;"></i>
+	<div id="card-list">
+		<form>
+			<div class="weui-cells">
+				<div class="searchbar-result">
+
+				</div>
+				<a class="weui-cell weui-cell_access" href="add-bank-card.html">
+					<div class="weui-cell__hd">
+						<i class="icon-plus" style="width: 60px; height: 60px;"></i>
+					</div>
+					<div class="weui-cell__bd">
+						<h4 class="weui-media-box__title">
+							<p>添加银行卡</p>
+						</h4>
+					</div>
+				</a>  
 			</div>
-			<div class="weui-cell__bd">
-				<h4 class="weui-media-box__title">
-					<p>添加银行卡</p>
-				</h4>
-			</div>
-		</a>  
+  		</form>
   	</div>
     <script type="text/javascript" src="../js/lib/zepto.min.js"></script>
     <script type="text/javascript" src="../js/lib/weuijs/weuijs.min.js"></script>
