--- a/m/my/balance.html
+++ b/m/my/balance.html
@@ -24,7 +24,7 @@
                     <!-- <a href="javascript:history.back();" class="weui-btn weui-btn_default">辅助操作</a> -->
                 </p>
             </div>
-            <a href="balance-history.html" style="font-size: 14px;">
+            <!--a href="balance-history.html" style="font-size: 14px;">
                  <span>明细</span>
             </a>
             <!-- <div class="weui-msg__extra-area">
