--- a/m/my/withdraw.html
+++ b/m/my/withdraw.html
@@ -13,47 +13,47 @@
 <body>
 	<div class="page__content">
 		<form id="detail-fm">
-		<div class="weui-cell weui-cell_access">
-			<div class="weui-cell__hd">
-				<p>银行卡</p>
-			</div>
-			<a class="weui-cell__bd" href="bank-card.html">
-				
-					<!--                         <div class="weui-media-box__hd">
-						<img class="weui-media-box__thumb" src="../../images/icon_nav_panel.png" alt="">
-					</div>
-					<div class="weui-media-box__bd">
-						<h4 class="weui-media-box__title">
-					<p>长沙银行</p>
-					<p >**** **** **** 8888</p>
-					</h4>
-					</div> -->
-				<p id="bank_acct"></p>
-				<input type="text" class="validate" name="bank_acct_no" value="" required="required" title="银行卡" style="display: none;">
-			</a>
-		</div>
-		<div class="weui-cells__title">提现金额</div>
-		<div class="weui-cells">
-			<div class="weui-cell">
+			<div class="weui-cell weui-cell_access">
 				<div class="weui-cell__hd">
-					<label style="padding-right: 15px; font-size: 28px;">￥</label>
+					<p>银行卡</p>
 				</div>
-				<div class="weui-cell__bd">
-					<input id="withdraw_amount" class="weui-input validate" type="text" name="withdraw_amount" pattern="[0-9]*" value="" required="required" title="提现金额" style="font-size: 28px;">
+				<a class="weui-cell__bd weui-cell_primary weui-cell_link" href="bank-card.html">
+
+						<!--                         <div class="weui-media-box__hd">
+							<img class="weui-media-box__thumb" src="../../images/icon_nav_panel.png" alt="">
+						</div>
+						<div class="weui-media-box__bd">
+							<h4 class="weui-media-box__title">
+						<p>长沙银行</p>
+						<p >**** **** **** 8888</p>
+						</h4>
+						</div> -->
+					<p id="bank_acct"></p>
+					<input type="text" class="validate" name="bank_acct_no" value="" required="required" title="银行卡" style="display: none;">
+				</a>
+			</div>
+			<div class="weui-cells__title">提现金额</div>
+			<div class="weui-cells">
+				<div class="weui-cell">
+					<div class="weui-cell__hd">
+						<label style="padding-right: 15px; font-size: 28px;">￥</label>
+					</div>
+					<div class="weui-cell__bd">
+						<input id="withdraw_amount" class="weui-input validate" type="text" name="withdraw_amount" pattern="[0-9]*" value="" required="required" title="提现金额" style="font-size: 28px;">
+					</div>
 				</div>
 			</div>
-		</div>
-		<!-- <div class="weui-cells__tips">可用余额88.88元<a href="javascript:void(0);">全部提现</a></div> -->
-		<label class="weui-agree">
-			<span class="weui-agree__text">
-			可用余额<span id="available_balance">0.00</span>元,<a href="javascript:void(0);" onclick="withdrawAll()">全部提现</a>
-			</span>
-		</label>
-		<!--a href="withdraw-history.html" class="navbar__link" style="font-size: 14px;">
-			<span>提现明细</span>
-		</a-->
-		<br>
-		<a href="javascript:;" class="weui-btn weui-btn_primary" onclick="submitDetail()">确认提现</a>
+			<!-- <div class="weui-cells__tips">可用余额88.88元<a href="javascript:void(0);">全部提现</a></div> -->
+			<label class="weui-agree">
+				<span class="weui-agree__text">
+				可用余额<span id="available_balance">0.00</span>元,<a href="javascript:void(0);" onclick="withdrawAll()">全部提现</a>
+				</span>
+			</label>
+			<!--a href="withdraw-history.html" class="navbar__link" style="font-size: 14px;">
+				<span>提现明细</span>
+			</a-->
+			<br>
+			<a href="javascript:;" class="weui-btn weui-btn_primary" onclick="submitDetail()">确认提现</a>
 		</form>
 	</div>
     <script type="text/javascript" src="../js/lib/zepto.min.js"></script>
@@ -65,7 +65,7 @@
 
     function submitDetail() {
 		if (!weui.form.validate('#detail-fm', {})) return;
-		var param = ('#detail-fm').serializeObject();
+		var param = $('#detail-fm').serializeObject();
 
 		$$.request('/action/user/withdraw', param, {
 			success: function(data) {
@@ -90,7 +90,7 @@
         });
 		$$.request('/action/as-user-card-info/list', {}, {
 			success: function(data) {
-				var DefaultCard = (data.rows[0]?data.rows[0].bank_nm+'('+data.rows[0].bank_acct_no+')':null) || '添加银行卡';
+				var DefaultCard = (data.rows[0]?(data.rows[0].bank_nm+'('+data.rows[0].bank_acct_no+')'):undefined) || '添加银行卡';
 				$('#bank_acct').text(DefaultCard);
 			}
         });
