--- a/m/my/merchant.html
+++ b/m/my/merchant.html
@@ -20,9 +20,11 @@
 </head>
 
 <body>
-    <div id="infinite" class="page__content">
-        <div id="merchant-list" class="weui-cells">
-        </div>
+    <div class="page__content">
+       	<form>
+			<div id="merchant-list" class="weui-cells searchbar-result">
+			</div>
+        </form>
     </div>
     <script type="text/javascript" src="../js/lib/zepto.min.js"></script>
     <script type="text/javascript" src="../js/lib/weuijs/weuijs.min.js"></script>
@@ -42,46 +44,43 @@
     // template.helper('formatAmount', function(amount) {
     //     return parseFloat(amount).toFixed(2)
     // });
-
-    function searchMerchant() {
-        var processing = false;
-        // $('#merchant-list').html('');
-        $('#merchant-list').pagination({
-            url: $$.wrapUrl('/action/user/merchant/list'),
-            pageNumber: 1,
-            queryParams: {},
-            onLoadSuccess: function(data) {
-                processing = false;
-                var html = template('merchant-templ', data);
-                $('#merchant-list').append(html);
+	function onSearch(param, success, error) {
+        var queryParams = param;
+        $$.request('/action/ss-merchant/list', queryParams, {
+            success: function(data) {
+                if (data.errcode == 0) {
+                    success(data.rows);
+                } else {
+					
+                }
             },
-            onLoadError: function() {
-                processing = false;
-            }
-        })
-
-        $('#infinite').infinite().on('infinite', function() {
-            if (!processing) {
-                processing = true;
-                $('#merchant-list').pagination('next');
+            error: function() {
+                error();
             }
         });
     }
-
-    $(function() {
-        //查询
-        searchMerchant();
-
-        $('#merchant-list').on('click', 'a.weui-cell', function() {
-            // showActions(this);
-            var id = $(this).attr('data-id');
+		
+	var searchMerchant = weui.searchPage('#merchant-list', {
+		resultTpl: '#merchant-templ',
+		loader: onSearch,
+		onInput: function() {
+			console.log(this, arguments);
+		},
+		onClickItem: function(row) {
+			console.log(this, arguments);
+			//weui.page.back();
+			var id = $(this).attr('data-id');
             var name = $(this).attr('data-name');
 
             window.location.href = 'income-history-merchant.html?' + $.param({
                 mcht_id: id,
                 mcht_name: name
             });
-        });
+		}
+	}).search();
+    $(function() {
+        //查询
+        searchMerchant.search();
     });
     </script>
 </body>
