--- a/m/my/bank-card.html
+++ b/m/my/bank-card.html
@@ -53,7 +53,7 @@
 			</div>
 			<div class="weui-media-box__bd">
 				<h4 class="weui-media-box__title">{{row.bank_nm}}</h4>
-				<p class="weui-media-box__desc">{{row.bank_acct_no | formatCardNo}}</p>
+				<p class="weui-media-box__desc">{{row.bank_acct_no}}</p>
 			</div>
 			<input type="hidden" name="rec_id" value="{{row.rec_id}}" required="required" title="银行卡">
         </div>    
