--- a/m/my/bank-card.html
+++ b/m/my/bank-card.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-	<div id="card-list">
+	<div class="page__content"  id="card-list">
 		<div class="weui-search-bar hide">
             <!-- <a href="javascript:" class="search-bar__btn" onclick="weui.page.back()">返回</a> -->
             <form class="weui-search-bar__form" method="post" action="">
