--- a/m/my/friend.html
+++ b/m/my/friend.html
@@ -21,7 +21,7 @@
 
 <body>
    	<div class="page__content" id="friend-list">
-   		<div class="weui-search-bar hide">
+   		<div class="weui-search-bar">
             <!-- <a href="javascript:" class="search-bar__btn" onclick="weui.page.back()">返回</a> -->
             <form class="weui-search-bar__form" method="post" action="">
                 <div class="weui-search-bar__box">
