--- a/m/my/friend.html
+++ b/m/my/friend.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-   	<div class="page__content" id="friend-list">
+   	<div class="page page_show" id="friend-list">
    		<div class="weui-search-bar">
             <!-- <a href="javascript:" class="search-bar__btn" onclick="weui.page.back()">返回</a> -->
             <form class="weui-search-bar__form" method="post" action="">
