--- a/m/my/bank-card.html
+++ b/m/my/bank-card.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-	<div class="page__content"  id="card-list">
+	<div class="page page_show"  id="card-list">
 		<div class="weui-search-bar hide">
             <!-- <a href="javascript:" class="search-bar__btn" onclick="weui.page.back()">返回</a> -->
             <form class="weui-search-bar__form" method="post" action="">
@@ -28,9 +28,9 @@
         </div>
 		<div class="weui-panel weui-panel_access">
 			<div class="weui-panel__hd">我的银行卡</div>
-			<div class="weui-panel__bd">
-				<div class="searchbar-result">
-				</div>
+			<div class="weui-panel__bd searchbar-result">
+				<!--div class="searchbar-result">
+				</div-->
 				<a class="weui-media-box weui-media-box_appmsg" href="add-bank-card.html">
 					<div class="weui-media-box__hd">
 						<i class="icon-plus" style="width: 60px; height: 60px;"></i>
