--- a/m/my.html
+++ b/m/my.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>首页</title>
+    <title>我的</title>
     <link rel="stylesheet" href="js/lib/weuijs/style/weuijs.min.css">
     <link rel="stylesheet" href="css/ui-base.css">
     <style type="text/css">
