--- a/m/busi/mchnt-param.html
+++ b/m/busi/mchnt-param.html
@@ -405,6 +405,7 @@
             <div class="weui-media-box__desc">商户号：{{row.mchnt_cd}}</div>
             <div class="weui-media-box__desc">收单机构：{{row.acq_inst_nm}}</div>
             <div class="weui-media-box__desc">开户行：{{row.account_bank_branch_nm}}</div>
+			<div class="weui-media-box__desc">业务类型：{{row.busi_type_nm}}</div>
             <div class="weui-media-box__desc">审核备注：{{row.checked_reason}}</div>
             <ul class="weui-media-box__info">
                 <li class="weui-media-box__info__meta">创建时间：{{row.created_time}}</li>
