--- a/m/busi/mchnt-base-info.html
+++ b/m/busi/mchnt-base-info.html
@@ -126,7 +126,7 @@
                         <label class="weui-label">营业执照期限</label>
                     </div>
                     <div class="weui-cell__bd">
-                        <input class="weui-input" type="text" name="license_date" placeholder="请选择营业执照期限" validType="date" id="license-date-picker">
+                        <input class="weui-input" type="text" name="license_date" placeholder="请选择营业执照期限"  id="license-date-picker">
                     </div>
                 </div>
                 <div class="weui-cell">
@@ -176,7 +176,7 @@
                         <label class="weui-label">证件有效期</label>
                     </div>
                     <div class="weui-cell__bd">
-                        <input class="weui-input" type="text" name="cert_date" placeholder="请输入证件有效期" validType="date" id="cert-date-picker">
+                        <input class="weui-input" type="text" name="cert_date" placeholder="请输入证件有效期" id="cert-date-picker">
                     </div>
                 </div>
                 <div class="weui-cell">
