--- a/m/my/authentication.html
+++ b/m/my/authentication.html
@@ -163,10 +163,14 @@
                         <input type="hidden" id="input_zm_image" name="id_card_zm_image" class="validate" required="required" title="身份证原件正面">
                     </dd>
                     <dt id="dt_zm_image" style="height: 158px;">
-                        <div class="i-chose">
-                            <img src="upload-click.png" id="zm_image" style="max-height: 158px;">
+                        <ul class="weui-uploader__files"></ul>
+                        <div class="weui-uploader__input-box">
+							<div class="i-chose">
+								<img src="upload-click.png" id="zm_image" style="max-height: 158px;">
+								<input id="uploader-zm" class="weui-uploader__input hide" type="file" accept="image/*" capture="camera">
+							</div>
+                       		<div class="font">身份证原件正面</div>
                         </div>
-                        <div class="font">身份证原件正面</div>
                     </dt>
                 </dl>
                 <dl>
@@ -175,10 +179,14 @@
                         <input type="hidden" id="input_fm_image" name="id_card_fm_image" class="validate" required="required" title="身份证原件反面">
                     </dd>
                     <dt id="dt_fm_image" style="height: 158px;">
-                        <div class="i-chose">
-                            <img src="upload-click.png" id="fm_image" style="max-height: 158px;">
-                        </div>
-                        <div class="font">身份证原件反面</div>
+                        <ul class="weui-uploader__files"></ul>
+                        <div class="weui-uploader__input-box">
+							<div class="i-chose">
+								<img src="upload-click.png" id="fm_image" style="max-height: 158px;">
+								<input id="uploader-fm" class="weui-uploader__input hide" type="file" accept="image/*" capture="camera">
+							</div>
+							<div class="font">身份证原件反面</div>
+                  		</div>
                     </dt>
                 </dl>
             </div>
@@ -188,16 +196,49 @@
     <script type="text/javascript" src="../js/lib/zepto.min.js"></script>
     <script type="text/javascript" src="../js/lib/weuijs/weuijs.min.js"></script>
     <script type="text/javascript">
-    requiredWx();
+	var uploaderData = [];
 
+    function initUploader(selector, elec_info_type) {
+
+        weui.ajaxUploader(selector, {
+            url: $$.wrapUrl('/action/upload'),
+            auto: true,
+            type: 'file',
+            fileVal: 'file',
+            compress: {
+                width: 1600,
+                height: 1600,
+                quality: 0.92
+            },
+            onBeforeSend: function(data, headers) {
+                console.log(this, arguments);
+                // return false; // 阻止文件上传
+            },
+            onSuccess: function(ret) {
+                uploaderData.push({
+                    status: '1',
+                    serverid: ret.serverid,
+                    elec_info_type: elec_info_type
+                });
+            },
+            onError: function(err) {
+                console.log(this, err);
+            }
+        });
+    }
+		
     $(function() {
         //验证
+		initUploader('#dt_zm_image', 'sfzzm');
+		initUploader('#dt_fm_image', 'sfzfm');
         $('#zm_image').click(function () {
-            uploadImage(['camera'], 'dt_zm_image', 'input_zm_image');
+			$('#uploader-zm').click();
+			$(this).hide();
         });
 
         $('#fm_image').click(function () {
-            uploadImage(['camera'], 'dt_fm_image', 'input_fm_image');
+			$('#uploader-fm').click();
+			$(this).hide();
         });
 
 
@@ -232,20 +273,6 @@
 			},
 			error: function() {}
 		});
-    }
-
-    function uploadImage(sourceType, dtId, inputId) {
-        wxChooseImage(sourceType, function(localId) {
-            wxUploadImage(localId, function(serverId) {
-                // data.app_created_time = $$.formatDate(new Date(), 'yyyyMMddhhmmss');
-                //生成html,存储
-                // $(template('uploader-file-templ', data)).appendTo(files).data('file', data);
-                $('#'+dtId).html('<img src="'+localId+'">');
-                $('#'+inputId).val(serverId);
-            }, function(res) {
-                $.toast('show', '上传失败,请重新上传' + JSON.stringify(res));
-            });
-        });
     }
     </script>
 </body>
