--- a/m/my/authentication.html
+++ b/m/my/authentication.html
@@ -89,12 +89,15 @@
         padding: 10px 5px;
     }
     
-    .upload-photos dl dt div img,
-	.upload-photos dl dt ul li{
+    .upload-photos dl dt div img{
         width: 35%;
         margin-top: 30px;
     }
-    
+	.weui-uploader__files .weui-uploader__file {
+		width: 35%;
+        margin-top: 30px;
+		max-height: 158px;
+	}
     .upload-photos dl dt span.delete {
         position: absolute;
         left: 0;
