--- a/m/my/authentication.html
+++ b/m/my/authentication.html
@@ -94,9 +94,9 @@
         margin-top: 30px;
     }
 	.weui-uploader__files .weui-uploader__file {
-		width: 35%;
-        margin-top: 30px;
-		max-height: 158px;
+		width: 100%;
+        margin-top: 0px;
+		height: 158px;
 	}
     .upload-photos dl dt span.delete {
         position: absolute;
